Fix description overflow

--- a/todo_client/src/components/styles/TaskItem.module.css
+++ b/todo_client/src/components/styles/TaskItem.module.css
@@ -19,10 +19,12 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    height: 100%;
+    height: 85%;
 }
 
 .title {
+    overflow: hidden;
+    white-space: nowrap;;
     font-size: 20px;
     font-weight: bold;
     color: #333;
@@ -43,7 +45,7 @@ a.description {
     color: black;
     transition: transform 0.2s;
     overflow-wrap: break-word;
-    overflow: hidden;
+    overflow: clip;
     font-size: 14px;
     margin-top: 10px;
     height: 75%;
